--- a/index_2.html
+++ b/index_2.html
@@ -55,7 +55,7 @@
 
         <div class="side two">
             <h2>🌷🌷🌷</h2>
-            <p>Querida Aida,</p>
+            <p>Amada Yuremha,</p>
 
             <!-- ✅ AQUÍ VA EL TEXTO LARGO, AHORA DESPLAZABLE -->
             <div class="scroll-message">
@@ -82,11 +82,11 @@
                 </p>
             </div>
 
-            <p>¡Feliz San Valentín!</p>
+            <p>¡Feliz San Valentín, mi lokita preciosa!</p>
 
             <p>
-                Con cariño,<br>
-                Whitmer Boa
+                Con todo mi amor,<br>
+                Whitmer (tu boita) 💖
             </p>
         </div>
     </div>
